home done, about us done, projects done,single event done,

--- a/about.html
+++ b/about.html
@@ -166,9 +166,7 @@
               </div>
               <!-- .entry-content -->
 
-              <div class="entry-footer mt-5">
-                <a href="#" class="btn gradient-bg mr-2">Read More</a>
-              </div>
+              
               <!-- .entry-footer -->
             </div>
             <!-- .welcome-content -->
@@ -331,31 +329,6 @@
             </div>
           </div>
         </div>
-        <!-- Team Member 7 -->
-        <div class="team-card">
-          <div class="member-image">
-            <img
-              src="images/Daniel1.jpg"
-              alt="Solomon Paa Larweh"
-              loading="lazy"
-            />
-          </div>
-          <div class="member-info">
-            <h3>Daniel Mireku Osei</h3>
-            <p class="role">Media / Publicity</p>
-            <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
-                ><i class="fas fa-globe"></i
-              ></a>
-            </div>
-          </div>
-        </div>
         <!-- Team Member 8 -->
         <div class="team-card">
           <div class="member-image">
@@ -381,71 +354,108 @@
             </div>
           </div>
         </div>
+        <!-- Team Member 7 -->
+        <div class="team-card">
+          <div class="member-image">
+            <img
+              src="images/Daniel1.jpg"
+              alt="Solomon Paa Larweh"
+              loading="lazy"
+            />
+          </div>
+          <div class="member-info">
+            <h3>Daniel Mireku Osei</h3>
+            <p class="role">Media / Publicity</p>
+            <div class="social-links">
+              <a href="#" class="social-icon" aria-label="LinkedIn"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a href="#" class="social-icon" aria-label="Twitter"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a href="#" class="social-icon" aria-label="Website"
+                ><i class="fas fa-globe"></i
+              ></a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="mission-section">
       <div class="container">
-       <strong> <p class="mission-text">
-          With a clear mission aligned with global development goals, we strive
-          to be a beacon of hope for those in need while fostering dignity and
-          empowerment.
-        </p>
-      </strong>
+        <strong>
+          <p class="mission-text">
+            With a clear mission aligned with global development goals, we
+            strive to be a beacon of hope for those in need while fostering
+            dignity and empowerment.
+          </p>
+        </strong>
       </div>
     </section>
     <section class="volunteers-section">
       <div class="container">
-          <h2 class="section-title">Words from some of our volunteers...</h2>
+        <h2 class="section-title">Words from some of our volunteers...</h2>
 
-          <!-- Swiper -->
-          <div class="swiper testimonialSwiper">
-              <div class="swiper-wrapper">
-                  <!-- Testimonial 1 -->
-                  <div class="swiper-slide">
-                      <div class="testimonial-card">
-                          <div class="volunteer-image">
-                              <img src="images/Solomon.jpg" alt="Volunteer 1">
-                          </div>
-                          <h3 class="volunteer-name">Ivy Dordaa</h3>
-                          <p class="testimonial-text">
-                              Through our school supply donation drives, I've witnessed firsthand the joy on children's faces when they receive the tools they need to succeed in their education. It's heartwarming to know that we're not only providing tangible resources but also inspiring hope in these young minds.
-                          </p>
-                      </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="testimonial-card">
-                        <div class="volunteer-image">
-                            <img src="images/Ruby.jpg" alt="Volunteer 1">
-                        </div>
-                        <h3 class="volunteer-name">Ivy Dordaa</h3>
-                        <p class="testimonial-text">
-                            Through our school supply donation drives, I've witnessed firsthand the joy on children's faces when they receive the tools they need to succeed in their education. It's heartwarming to know that we're not only providing tangible resources but also inspiring hope in these young minds.
-                        </p>
-                    </div>
+        <!-- Swiper -->
+        <div class="swiper testimonialSwiper">
+          <div class="swiper-wrapper">
+            <!-- Testimonial 1 -->
+            <div class="swiper-slide">
+              <div class="testimonial-card">
+                <div class="volunteer-image">
+                  <img src="images/Solomon.jpg" alt="Volunteer 1" />
                 </div>
-                <div class="swiper-slide">
-                  <div class="testimonial-card">
-                      <div class="volunteer-image">
-                          <img src="images/princess.jpg" alt="Volunteer 1">
-                      </div>
-                      <h3 class="volunteer-name">Ivy Dordaa</h3>
-                      <p class="testimonial-text">
-                          Through our school supply donation drives, I've witnessed firsthand the joy on children's faces when they receive the tools they need to succeed in their education. It's heartwarming to know that we're not only providing tangible resources but also inspiring hope in these young minds.
-                      </p>
-                  </div>
+                <h3 class="volunteer-name">Ivy Dordaa</h3>
+                <p class="testimonial-text">
+                  Through our school supply donation drives, I've witnessed
+                  firsthand the joy on children's faces when they receive the
+                  tools they need to succeed in their education. It's
+                  heartwarming to know that we're not only providing tangible
+                  resources but also inspiring hope in these young minds.
+                </p>
               </div>
-                  <!-- Add more testimonials here -->
-                  <!-- Testimonials 2-5 with similar structure -->
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-card">
+                <div class="volunteer-image">
+                  <img src="images/Ruby.jpg" alt="Volunteer 1" />
+                </div>
+                <h3 class="volunteer-name">Ivy Dordaa</h3>
+                <p class="testimonial-text">
+                  Through our school supply donation drives, I've witnessed
+                  firsthand the joy on children's faces when they receive the
+                  tools they need to succeed in their education. It's
+                  heartwarming to know that we're not only providing tangible
+                  resources but also inspiring hope in these young minds.
+                </p>
               </div>
-              <!-- Navigation -->
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
-              <!-- Pagination -->
-              <div class="swiper-pagination"></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-card">
+                <div class="volunteer-image">
+                  <img src="images/princess.jpg" alt="Volunteer 1" />
+                </div>
+                <h3 class="volunteer-name">Ivy Dordaa</h3>
+                <p class="testimonial-text">
+                  Through our school supply donation drives, I've witnessed
+                  firsthand the joy on children's faces when they receive the
+                  tools they need to succeed in their education. It's
+                  heartwarming to know that we're not only providing tangible
+                  resources but also inspiring hope in these young minds.
+                </p>
+              </div>
+            </div>
+            <!-- Add more testimonials here -->
+            <!-- Testimonials 2-5 with similar structure -->
           </div>
+          <!-- Navigation -->
+          
+          <!-- Pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
-  </section>
+    </section>
 
     <!-- FOOTER -->
     <footer id="footer" class="section">
@@ -597,32 +607,32 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
-        const swiper = new Swiper('.testimonialSwiper', {
-            slidesPerView: 1,
-            spaceBetween: 30,
-            loop: true,
-            centeredSlides: true,
-            autoplay: {
-                delay: 5000,
-                disableOnInteraction: false,
-            },
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-            breakpoints: {
-                768: {
-                    slidesPerView: 2,
-                },
-                1024: {
-                    slidesPerView: 3,
-                },
-            },
-        });
+      const swiper = new Swiper(".testimonialSwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        loop: true,
+        centeredSlides: true,
+        autoplay: {
+          delay: 5000,
+          disableOnInteraction: false,
+        },
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        breakpoints: {
+          768: {
+            slidesPerView: 2,
+          },
+          1024: {
+            slidesPerView: 3,
+          },
+        },
+      });
     </script>
   </body>
 </html>
