--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div><!-- .header-bar-email -->
 
                     <div class="header-bar-text">
-                        <p>PHONE: <i class="fa fa-phone"></i> 053 044 9325</p>
+                        <p>PHONE: <i class="fa fa-phone"></i>+233 53 044 9325</p>
                     </div><!-- .header-bar-text -->
                 </div><!-- .col -->
 
