--- a/about.html
+++ b/about.html
@@ -399,13 +399,13 @@
                 <div class="volunteer-image">
                   <img src="images/Ruby.jpg" alt="Volunteer 1" />
                 </div>
-                <h3 class="volunteer-name">Ivy Dordaa</h3>
+                <h3 class="volunteer-name">Joshua Otu</h3>
                 <p class="testimonial-text">
-                  Through our school supply donation drives, I've witnessed
-                  firsthand the joy on children's faces when they receive the
-                  tools they need to succeed in their education. It's
-                  heartwarming to know that we're not only providing tangible
-                  resources but also inspiring hope in these young minds.
+                  Joining Le Shelter Foundation as a volunteer has been an eye-opening experience.
+                  Le Shelter Foundation has not only empowered the communities we serve 
+                  but has also empowered me with a renewed sense of purpose 
+                  and a deeper understanding of how small efforts can create 
+                  significant change.
                 </p>
               </div>
             </div>
@@ -414,13 +414,12 @@
                 <div class="volunteer-image">
                   <img src="images/princess.jpg" alt="Volunteer 1" />
                 </div>
-                <h3 class="volunteer-name">Ivy Dordaa</h3>
+                <h3 class="volunteer-name">Priscilla Quansah</h3>
                 <p class="testimonial-text">
-                  Through our school supply donation drives, I've witnessed
-                  firsthand the joy on children's faces when they receive the
-                  tools they need to succeed in their education. It's
-                  heartwarming to know that we're not only providing tangible
-                  resources but also inspiring hope in these young minds.
+                  As a mentor in LSF’s mentorship programs, 
+                  I’ve had the chance to connect with students from rural areas 
+                  and help guide them in making informed decisions about their futures.
+                  LSF has not only benefited the communities but has also given me the opportunity to grow as a mentor and leader.
                 </p>
               </div>
             </div>
