--- a/about.html
+++ b/about.html
@@ -175,13 +175,13 @@
             <h3>Ruby Offeibea Adu</h3>
             <p class="role">Founder / President</p>
             <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/ing-ruby-offeibea-adu-86756754?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
+              ></a> -->
+              <a href="https://www.instagram.com/ruby.offeibea?igsh=b3lqMWlrcjdhNXNw" target="blank" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -197,13 +197,13 @@
             <h3>Benedicta Safo</h3>
             <p class="role">Vice President</p>
             <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/benedicta-safo-225291108?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
+              ></a> -->
+              <a href="https://www.instagram.com/ser___waa?igsh=eWo1bWRxaXBsNmNl" target="blank" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -219,13 +219,13 @@
             <h3>Joana Attafuah</h3>
             <p class="role">Secretary</p>
             <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/joana-attafuah-b67686103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
+              ></a> -->
+              <a href="https://www.instagram.com/jaka_word?igsh=dHg5bXAwMDdwNGNm" target="blank" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -248,10 +248,10 @@
               <a href="#" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
+              ></a> -->
+              <a href="https://www.instagram.com/pappy_solo07?igsh=NDllOXZ3cjVmdmg1" target="blank" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -262,7 +262,7 @@
           <div class="member-image">
             <img
               src="images/Adelaide1.jpg"
-              alt="Solomon Paa Larweh"
+              alt="Adelaide"
               loading="lazy"
             />
           </div>
@@ -270,12 +270,12 @@
             <h3>Adelaide Bosrotsi</h3>
             <p class="role">Sponsorship Coordinator</p>
             <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/adelaide-bosrotsi-91aaabb0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="blank" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
+              ></a> -->
               <a href="#" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
@@ -287,7 +287,7 @@
           <div class="member-image">
             <img
               src="images/princess1.jpg"
-              alt="Solomon Paa Larweh"
+              alt="Princess"
               loading="lazy"
             />
           </div>
@@ -298,9 +298,9 @@
               <a href="#" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
+              ></a> -->
               <a href="#" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
@@ -312,7 +312,7 @@
           <div class="member-image">
             <img
               src="images/Cindy1.jpg"
-              alt="Solomon Paa Larweh"
+              alt="Cindy"
               loading="lazy"
             />
           </div>
@@ -320,13 +320,13 @@
             <h3>Cindy Monica Agbeme</h3>
             <p class="role">Mentorship Coordinator</p>
             <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/cindy-agbeme-41a46b314?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="blank" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
+              ></a> -->
+              <a href="https://www.instagram.com/unikmoniq?igsh=dWh0ZGZ3ZzA0a3Rn" target="blank" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
@@ -337,7 +337,7 @@
           <div class="member-image">
             <img
               src="images/Daniel1.jpg"
-              alt="Solomon Paa Larweh"
+              alt="Daniel"
               loading="lazy"
             />
           </div>
@@ -345,13 +345,13 @@
             <h3>Daniel Mireku Osei</h3>
             <p class="role">Media / Publicity</p>
             <div class="social-links">
-              <a href="#" class="social-icon" aria-label="LinkedIn"
+              <a href="https://www.linkedin.com/in/ing-daniel-mireku-osei-pe-ghie-57220b75?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="blank" class="social-icon" aria-label="LinkedIn"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="#" class="social-icon" aria-label="Twitter"
+              <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="social-icon" aria-label="Website"
+              ></a> -->
+              <a href="https://www.instagram.com/darnyelo?igsh=MTh5ZGc2Zm5hamlhbA==" target="blank" class="social-icon" aria-label="Website"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
