--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                       
                     </p>
                     <div class="entry-footer mt-5">
-                      <a  class="btn gradient-bg mr-2" href="/causes.html">Read More</a>
+                      <a  class="btn gradient-bg mr-2" href="/Projects.html">Read More</a>
                     </div>
                   </div>
                   <!-- .entry-content -->
@@ -593,7 +593,7 @@
                     <!-- .posted-date -->
 
                     <div class="cats-links">
-                      <a >Pokrom</a>
+                      <a>Pokrom</a>
                     </div>
                     <!-- .cats-links -->
                   </header>
