--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,26 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+
+
+    <link rel="stylesheet" href="Gallery/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="Gallery/css/magnific-popup.css"/>
+  <link rel="stylesheet" href="Gallery/css/jquery-ui.css"/>
+  <link rel="stylesheet" href="Gallery/css/owl.carousel.min.css"/>
+  <link rel="stylesheet" href="Gallery/css/owl.theme.default.min.css"/>
+
+  <link rel="stylesheet" href="Gallery/css/lightgallery.min.css"/>    
+
+  <link rel="stylesheet" href="Gallery/css/bootstrap-datepicker.css"/>
+
+  
+  <link rel="stylesheet" href="Gallery/css/swiper.css"/>
+
+  <link rel="stylesheet" href="Gallery/css/aos.css"/>
+
+ 
+
+
   </head>
 
   <body class="single-page about-page">
@@ -59,7 +79,7 @@
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
                     <div class="top-button donate-btn" data-modal="donateModal1">
-                        <a href="#">Donate Now</a>
+                        <a href="#">Donate</a>
                     </div><!-- .donate-btn -->
                 </div><!-- .col -->
             </div><!-- .row -->
@@ -449,5 +469,50 @@ function closeFlyerModal() {
 }
 
 </script>
-  </body>
+
+
+
+
+
+<script src="Gallery/js/jquery-3.3.1.min.js"></script>
+<script src="Gallery/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="Gallery/js/jquery-ui.js"></script>
+<script src="Gallery/js/popper.min.js"></script>
+<script src="Gallery/js/bootstrap.min.js"></script>
+<script src="Gallery/js/owl.carousel.min.js"></script>
+<script src="Gallery/js/jquery.stellar.min.js"></script>
+<script src="Gallery/js/jquery.countdown.min.js"></script>
+<script src="Gallery/js/jquery.magnific-popup.min.js"></script>
+<script src="Gallery/js/bootstrap-datepicker.min.js"></script>
+<script src="Gallery/js/swiper.min.js"></script>
+<script src="Gallery/js/aos.js"></script>
+
+<script src="Gallery/js/picturefill.min.js"></script>
+<script src="Gallery/js/lightgallery-all.min.js"></script>
+<script src="Gallery/js/jquery.mousewheel.min.js"></script>
+
+<script src="Gallery/js/main.js"></script>
+
+<script>
+  $(document).ready(function(){
+    $('#lightgallery').lightGallery();
+  });
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-23581568-13');
+</script>
+
+
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"904a32804c807312","version":"2025.1.0","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"token":"cd0b4b3a733644fc843ef0b185f98241","b":1}' crossorigin="anonymous"></script>
+</body>
+
 </html>
+  
+
