--- a/contact.html
+++ b/contact.html
@@ -193,11 +193,12 @@
                     <form class="contact-form">
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
+                        <input type="tel" placeholder="Phone Number">
                         <input type="text" placeholder="Subject">
-                        <textarea rows="15" cols="6" placeholder="Messages"></textarea>
+                        <textarea rows="10" cols="6" placeholder="Messages"></textarea>
   
                         <span>
-                            <input class="btn orange-border" type="submit" value="Submit">
+                            <input class="btn gradient-bg" type="submit" value="Submit">
                         </span>
                     </form><!-- .contact-form -->
   
