--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
                     <div class="top-button donate-btn" data-modal="donateModal1">
-                        <a href="#">Donate Now</a>
+                        <a href="#">Donate</a>
                     </div><!-- .donate-btn -->
                 </div><!-- .col -->
             </div><!-- .row -->
