footer link done

--- a/index.html
+++ b/index.html
@@ -297,11 +297,8 @@
         <div class="row align-items-end">
           <div class="col-12 col-lg-5">
             <!-- Wrap the entire content inside an anchor tag -->
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1"
-              target="_blank"
-              class="icon-box-link"
-            >
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank"
+              class="icon-box-link">
               <div class="icon-box ">
                 <figure class="d-flex justify-content-center">
                   <img src="images/hands-gray.png" alt="" />
@@ -756,10 +753,8 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?usp=sharing"
-                        style="color: white; width: 60px">
-                        <h6><strong>❤️ Become A Volunteer ❤️</strong></h6></a>
+                      <h6><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" style="color: white;">
+                        ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
               </div>
