--- a/Projects.html
+++ b/Projects.html
@@ -419,14 +419,12 @@
                 </div>
                 
                 
-                  <form class="footer-volunteer">
-                    <button class="footer-button">
-                      <a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?usp=sharing"
-                        style="color: white; width: 60px">
-                        <h6><strong>❤️ Become A Volunteer ❤️</strong></h6></a>
-                    </button>
-                  </form>
+                <form class="footer-volunteer">
+                  <button class="footer-button">
+                    <h6><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" style="color: white;">
+                      ❤️ Become A Volunteer ❤️</a></strong></h6>
+                  </button>
+                </form>
               </div>
             </div>
           </div>
