--- a/Projects.html
+++ b/Projects.html
@@ -58,7 +58,7 @@
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
-                    <div class="top-button donate-btn" data-modal="donateModal1">
+                    <div class="primary-button donate-btn" data-modal="donateModal1">
                         <a href="#">Donate</a>
                     </div><!-- .donate-btn -->
                 </div><!-- .col -->
