--- a/Projects/Bunso.html
+++ b/Projects/Bunso.html
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>Asiafo Amanfro M/A School</h1>
+            <h1>Bunso M/A School</h1>
           </div>
           <!-- .col -->
         </div>
@@ -173,10 +173,10 @@
                 <img src="/images/1.jpg" alt="" />
               </div>
               <div class="article-content">
-                <h2 class="article-title"><strong>Asiafo Amanfro M/A School</strong></h2> 
+                <h2 class="article-title"><strong>Bunso M/A School</strong></h2> 
                 <ul class="article-meta text-center">
-                  <li><i class="fa fa-calendar" aria-hidden="true"></i> October, 2024</li>
-                  <li><i class="fa fa-map-marker" aria-hidden="true"></i> Akaa</li>
+                  <li><i class="fa fa-calendar" aria-hidden="true"></i> September, 2022</li>
+                  <li><i class="fa fa-map-marker" aria-hidden="true"></i> Bunso</li>
                 </ul>
                 <p style="text-align: justify">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -240,6 +240,19 @@
             <div class="widget mt-5 ">
               <h3 class="widget-title">Latest Posts</h3>
               <div class="widget-post">
+                <a href="Asiafo.html">
+                  <div class="widget-img">
+                    <img src="/images/1.jpg" alt="" />
+                  </div>
+                  <div class="widget-content">
+                    <span>Asiafo Amanfro M/A School</span>
+                  </div>
+                </a>
+                
+              </div>
+
+              <!-- single post -->
+              <div class="widget-post">
                 <a href="Asutsuare.html">
                   <div class="widget-img">
                     <img src="/images/1.jpg" alt="" />
@@ -263,17 +276,6 @@
                 </a>
               </div>
 
-              <!-- single post -->
-              <div class="widget-post">
-                <a href="Bunso.html">
-                  <div class="widget-img">
-                    <img src="/images/20.jpg" alt="" />
-                  </div>
-                  <div class="widget-content">
-                    <span>Bunso M/A School</span>
-                  </div>
-                </a>
-              </div>
 
               <!-- single post -->
               <div class="widget-post">
