--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                     </div><!-- .header-bar-email -->
 
                     <div class="header-bar-text">
-                        <p>PHONE: <i class="fa fa-phone"></i>+233 53 044 9325</p>
-                    </div><!-- .header-bar-text -->
+                      <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></p>
+                  </div><!-- .header-bar-text -->
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
@@ -116,7 +116,7 @@
       <div class="modal-content">
         <span class="close-btn">&times;</span>
         <img
-          src="images/image__1_-removebg-preview.png"
+          src="images/image__1_-removebg-preview.png" alt="#"
           style="height: 80px; width: 250px"
         />
         <!-- <p>Here are the details for making your donation:</p> -->
@@ -227,7 +227,7 @@
             <p class="role">Founder / President</p>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/ing-ruby-offeibea-adu-86756754?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="social-icon" aria-label="LinkedIn"
-                ><i class="fab fa-linkedin"></i
+               rel=" " ><i class="fab fa-linkedin"></i
               ></a>
               <!-- <a href="#" class="social-icon" aria-label="Twitter"
                 ><i class="fab fa-twitter"></i
