--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,11 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="Styless.css" />
+
+
+    <!-- <link rel="stylesheet" href="Gallery/css/style.css" /> -->
+
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -53,8 +58,8 @@
                     </div><!-- .header-bar-email -->
 
                     <div class="header-bar-text">
-                        <p>PHONE: <i class="fa fa-phone"></i>+233 53 044 9325</p>
-                    </div><!-- .header-bar-text -->
+                      <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></p>
+                  </div><!-- .header-bar-text -->
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
@@ -453,6 +458,17 @@ function closeFlyerModal() {
 
 </script>
 
+<link href="Gallery/css/aos.css" rel="stylesheet"/>
+<!-- <link href="Gallery/css/bootstrap-datepicker.css" rel="stylesheet"/> -->
+<!-- <link href="Gallery/css/bootstrap.min.css" rel="stylesheet"/> -->
+<link href="Gallery/css/jquery-ui.css" rel="stylesheet"/>
+<link href="Gallery/css/lightgallery.min.css" rel="stylesheet"/>
+<link href="Gallery/css/magnific-popup.css" rel="stylesheet"/>
+<link href="Gallery/css/owl.carousel.min.css" rel="stylesheet"/>
+<link href="Gallery/css/owl.theme.default.min.css" rel="stylesheet"/>
+<link href="Gallery/css/swiper.css" rel="stylesheet"/>
+<!-- <link href="Gallery/css/style.css"stylesheet"/> -->
+
 
 
 
@@ -469,11 +485,9 @@ function closeFlyerModal() {
 <script src="Gallery/js/bootstrap-datepicker.min.js"></script>
 <script src="Gallery/js/swiper.min.js"></script>
 <script src="Gallery/js/aos.js"></script>
-
 <script src="Gallery/js/picturefill.min.js"></script>
 <script src="Gallery/js/lightgallery-all.min.js"></script>
 <script src="Gallery/js/jquery.mousewheel.min.js"></script>
-
 <script src="Gallery/js/main.js"></script>
 
 <script>
