--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+      name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -53,8 +51,8 @@
                     </div><!-- .header-bar-email -->
 
                     <div class="header-bar-text">
-                        <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325</p>
-                    </div><!-- .header-bar-text -->
+                      <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></p>
+                  </div><!-- .header-bar-text -->
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
@@ -381,7 +379,7 @@
 
               <div class="cause-wrap d-flex flex-wrap justify-content-between">
                <figure class="m-0">
-                  <img src="images/Flyer1.jpg" alt="Flyer" class="flyer" onclick="openFlyerModal()" />
+                  <img src="images/Flyer.jpg" alt="Flyer" class="flyer" onclick="openFlyerModal()" />
               </figure>
               
               <div id="flyerModal" class="modal">
@@ -704,7 +702,7 @@
                 
                   <form class="footer-volunteer">
                     <button class="footer-button">
-                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" >
+                      <h6 class="mt-2"><strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSf8BNb_TOu1TX99yPvh-6kXlTA_dcG3nNBWbJJK5OmTPgmAxQ/viewform?pli=1" target="_blank" rel="">
                         ❤️ Become A Volunteer ❤️</a></strong></h6>
                     </button>
                   </form>
