--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
-      name="viewport" content="width=device-width, initial-scale=1"/>
+      name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -28,30 +28,30 @@
     <link rel="stylesheet" href="css/swiper.min.css" />
 
     
-    <!-- Styles -->
-    <link rel="stylesheet" href="Styless.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+     <!-- Styles -->
+     <link rel="stylesheet" href="Styless.css" />
+     <link
+       rel="stylesheet"
+       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+     />
+     <link
+       rel="stylesheet"
+       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+     />
   </head>
 
-  <body>
+  <body class="single-page about-page">
     <header class="site-header">
       <div class="top-header-bar">
         <div class="container">
             <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-lg-center">
-                <div class="col-12 col-lg-8 d-none d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-3 mb-lg-0">
-                    <div class="header-bar-email">
-                      MAIL: <i class="fa fa-envelope"></i><a> lesheltergh@gmail.com</a>
-                    </div><!-- .header-bar-email -->
+                <div class="col-12 col-lg-8 col-lg-4 d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-lg-0">
+                  <div class="header-bar-email col-12 col-lg-6 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center mt-2">
+                    <span> MAIL: <i class="fa fa-envelope"></i> lesheltergh@gmail.com</span>
+                  </div><!-- .header-bar-email -->
 
-                    <div class="header-bar-text">
-                      <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></p>
+                  <div class="header-bar-email col-12 col-lg-6 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center mt-2">
+                    <span>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></span>
                   </div><!-- .header-bar-text -->
                 </div><!-- .col -->
 
@@ -120,11 +120,12 @@
               </div>
             </div>
           </div>
-        
+
+
           <!-- Carousel Item 2 -->
           <div class="carousel-item">
             <img
-              src="images/IMG_6657.JPG"
+            src="images/IMG_6657.JPG"
               class="d-block w-100"
               alt="Image 2"
             />
@@ -135,7 +136,7 @@
               <p>
                 At Le Shelter, we are committed to improving the lives of children facing hardship. With years of dedication and hard work, we’ve achieved significant milestones in education, healthcare, and community support. Join us in continuing to create lasting change and hope for children everywhere.
               </p>
-              <div class="d-flex flex-wrap align-items-center mt-5">
+              <div class="d-flex flex-wrap align-items-center mt-2">
                 <a class="primary-button donate-btn" data-modal="donateModal1">Donate Now</a>
                 <a href="about.html" class="btn orange-border">Read More</a>
               </div>
