--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      />
   </head>
 
-  <body class="single-page about-page">
+  <body>
     <header class="site-header">
       <div class="top-header-bar">
         <div class="container">
