--- a/Projects/Asiafo.html
+++ b/Projects/Asiafo.html
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="/index.html" rel="home"><img class="d-block" src="/images/image__1_-removebg-preview.png" href="index.html" alt="logo"></a>
+                <a class="d-block" href="/index.html" rel="home"><img class="d-block" src="/images/Logo.png" href="index.html" alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
@@ -116,7 +116,7 @@
       <div class="modal-content">
         <span class="close-btn">&times;</span>
         <img
-          src="/images/image__1_-removebg-preview.png"
+          src="/images/Logo.png"
           style="height: 80px; width: 250px"
         />
         <!-- <p>Here are the details for making your donation:</p> -->
@@ -327,7 +327,7 @@
             <div class="col-12 col-lg-5 col-md-6">
               <div class="footer-logo">
                 <a class="logo" href="/index.html">
-                  <img src="/images/image__1_-removebg-preview.png" alt=""></a>
+                  <img src="/images/Logo.png" alt=""></a>
               </div>
               
             </div>
