--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -91,7 +91,7 @@
                 <a class="d-block" href="index.html" rel="home"
                   ><img
                     class="d-block"
-                    src="images/image__1_-removebg-preview.png"
+                    src="images/Logo.png"
                     alt="logo"
                 /></a>
               </div>
@@ -352,7 +352,7 @@
             <div class="col-12 col-lg-5">
               <div class="footer-logo">
                 <a class="logo" href="#">
-                  <img src="/images/image__1_-removebg-preview.png" alt=""></a>
+                  <img src="/images/Logo.png" alt=""></a>
               </div>
               <div class=" pt-3">
                 <ul class="footer-social">
