--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
     <header class="site-header">
       <div class="top-header-bar">
         <div class="container">
-          <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-lg-center">
-            <div class="col-12 col-lg-8 col-lg-4 d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-lg-0">
-              <div class="header-bar-email col-12 col-lg-6 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center mt-2">
-                <span> MAIL: <i class="fa fa-envelope"></i> lesheltergh@gmail.com</span>
-              </div><!-- .header-bar-email -->
+            <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-lg-center">
+                <div class="col-12 col-lg-8 d-none d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-3 mb-lg-0">
+                    <div class="header-bar-email">
+                      MAIL: <i class="fa fa-envelope"></i><a> lesheltergh@gmail.com</a>
+                    </div><!-- .header-bar-email -->
 
-              <div class="header-bar-email col-12 col-lg-6 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center mt-2">
-                <span>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></span>
-              </div><!-- .header-bar-text -->
-            </div><!-- .col -->
+                    <div class="header-bar-text">
+                        <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325</p>
+                    </div><!-- .header-bar-text -->
+                </div><!-- .col -->
 
-            <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
-              <div class="top-button donate-btn" data-modal="donateModal1">
-                <a href="#">Donate <i class="fa-solid fa-hand-holding-heart"></i></a>
-              </div><!-- .donate-btn -->
-            </div><!-- .col -->
-          </div><!-- .row -->
+                <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
+                    <div class="top-button donate-btn" data-modal="donateModal1">
+                        <a href="#">Donate <i class="fa-solid fa-hand-holding-heart"></i></a>
+                    </div><!-- .donate-btn -->
+                </div><!-- .col -->
+            </div><!-- .row -->
         </div><!-- .container -->
-      </div><!-- .top-header-bar -->
+    </div><!-- .top-header-bar -->
 
       <!-- logo & navs -->
       <div class="nav-bar">
