--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 At Le Shelter, we are committed to improving the lives of children facing hardship. With years of dedication and hard work, we’ve achieved significant milestones in education, healthcare, and community support. Join us in continuing to create lasting change and hope for children everywhere.
               </p>
               <div class="d-flex flex-wrap align-items-center mt-2">
-                <a class="primary-button donate-btn" data-modal="donateModal1">Donate Now</a>
+                <a class="primary-button donate-btn" data-modal="donateModal1">Donate</a>
                 <a href="about.html" class="btn orange-border">Read More</a>
               </div>
             </div>
@@ -131,7 +131,7 @@
                 At Le Shelter, we are committed to improving the lives of children facing hardship. With years of dedication and hard work, we’ve achieved significant milestones in education, healthcare, and community support. Join us in continuing to create lasting change and hope for children everywhere.
               </p>
               <div class="d-flex flex-wrap align-items-center mt-2">
-                <a class="primary-button donate-btn" data-modal="donateModal1">Donate Now</a>
+                <a class="primary-button donate-btn" data-modal="donateModal1">Donate</a>
                 <a href="about.html" class="btn orange-border">Read More</a>
               </div>
             </div>
