--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,8 @@
                 </div><!-- .col -->
   
                 <div class="col-12 col-lg-7">
-                    <form class="contact-form">
+                    <form class="contact-form" action="https://formspree.io/f/xpwpadow"
+                    method="POST">
                         <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
                         <input type="tel" placeholder="Phone Number">
