--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
         <!-- Team Member 3 -->
         <div class="team-card">
           <div class="member-image">
-            <img src="/images/Ruby1.jpg" alt="Joana Attafuah" loading="lazy" />
+            <img src="images/Ruby1.jpg" alt="Ruby Offeibea Adu" loading="lazy" />
           </div>
           <div class="member-info">
             <h3>Joana Attafuah</h3>
