--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="index.html" rel="home"><img class="d-block" src="/images/Logo.png" href="index.html" alt="logo"></a>
+                <a class="d-block" href="#" rel="home"><img class="d-block" src="/images/Logo.jpg"  alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
