--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="#" rel="home"><img class="d-block" src="/images/Logo.png"  alt="logo"></a>
+                <a class="d-block" href="#" rel="home"><img class="d-block" src="images/Logo.png"  alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
@@ -269,7 +269,7 @@
               <div class="col-10 col-sm-3 mt-lg-0">
                 <div class="counter-box">
                   <div class="d-flex justify-content-center align-items-center">
-                    <img src="/images/dove.png" alt="" />
+                    <img src="images/dove.png" alt="" />
                   </div>
 
                   <div class="d-flex justify-content-center align-items-baseline">
@@ -288,7 +288,7 @@
               <div class="col-10 col-sm-3 mt-lg-0">
                 <div class="counter-box ">
                   <div class="d-flex justify-content-center align-items-center">
-                    <img src="/images/olive.png" alt="" />
+                    <img src="images/olive.png" alt="" />
                   </div>
 
                   <div class="d-flex justify-content-center align-items-baseline">
@@ -306,7 +306,7 @@
               <div class="col-10 col-sm-3  mt-lg-0">
                 <div class="counter-box ">
                   <div class="d-flex justify-content-center align-items-center">
-                    <img src="/images/teamwork.png" alt="" />
+                    <img src="images/teamwork.png" alt="" />
                   </div>
                   <div class="d-flex justify-content-center align-items-baseline">
                     <div
