--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon/favicon-16x16.png">
-    <link rel="manifest" href="/images/icon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icon/favicon-16x16.png">
+    <link rel="manifest" href="images/icon/site.webmanifest">
     <title>Le Shelter Foundation</title>
 
     <!-- Required meta tags -->
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="#" rel="home"><img class="d-block" src="/images/Logo.jpg"  alt="logo"></a>
+                <a class="d-block" href="#" rel="home"><img class="d-block" src="images/Logo.jpg"  alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
@@ -494,7 +494,7 @@
             <div class="col-12 col-lg-5 col-md-6">
               <div class="footer-logo">
                 <a class="logo" href="index.html">
-                  <img src="/images/Logo.png" alt=""></a>
+                  <img src="images/Logo.png" alt=""></a>
               </div>
               
             </div>
