--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon/favicon-16x16.png">
-    <link rel="manifest" href="/images/icon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icon/favicon-16x16.png">
+    <link rel="manifest" href="images/icon/site.webmanifest">
     <title>Le Shelter Foundation</title>
 
     <!-- Required meta tags -->
@@ -64,7 +64,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap justify-content-between mb-2 align-items-center">
               <div class="site-branding d-flex align-items-center">
-                <a class="d-block" href="#" rel="home"><img class="d-block" src="/images/Logo.png"  alt="logo"></a>
+                <a class="d-block" href="#" rel="home"><img class="d-block" src="images/Logo.png"  alt="logo"></a>
               </div><!-- .site-branding -->
   
               <nav  class="site-navigation d-flex justify-content-end align-items-center">
@@ -269,7 +269,7 @@
               <div class="col-10 col-sm-3 mt-lg-0">
                 <div class="counter-box">
                   <div class="d-flex justify-content-center align-items-center">
-                    <img src="images/dove.png" alt="" />
+                    <img src="images/" alt="" />
                   </div>
 
                   <div class="d-flex justify-content-center align-items-baseline">
@@ -664,7 +664,7 @@
             <div class="col-12 col-lg-5 col-md-6">
               <div class="footer-logo">
                 <a class="logo" href="index.html">
-                  <img src="/images/Logo.png" alt=""></a>
+                  <img src="images/Logo.png" alt=""></a>
               </div>
               
             </div>
