--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <div class="col-10 col-sm-3 mt-lg-0">
                 <div class="counter-box">
                   <div class="d-flex justify-content-center align-items-center">
-                    <img src="images/" alt="" />
+                    <img src="images/dove.png" alt="" />
                   </div>
 
                   <div class="d-flex justify-content-center align-items-baseline">
