--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     </div><!-- .header-bar-email -->
 
                     <div class="header-bar-text">
-                        <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325</p>
-                    </div><!-- .header-bar-text -->
+                      <p>PHONE: <i class="fa fa-phone"></i> +233 53 044 9325 <i class="fa-brands fa-whatsapp"></i></p>
+                  </div><!-- .header-bar-text -->
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-4 mt-1 mb-1 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
